netcfg (1.24) UNRELEASED; urgency=low

  [ Martin Michlmayr ]
  * Add armeb to the Architecture field.

 -- Martin Michlmayr <tbm@cyrius.com>  Mon, 30 Jan 2006 01:34:16 +0000

netcfg (1.23) unstable; urgency=low

  * Don't propagate NetcfgDHClient class identifier to installed system.

 -- Colin Watson <cjwatson@debian.org>  Tue, 17 Jan 2006 12:51:16 +0000

netcfg (1.22) unstable; urgency=low

  [ Joey Hess ]
  * The return of my friend liw.

  [ Colin Watson ]
  * Make progress bars for DHCP and wireless AP search cancellable
    (closes: #247045). Requires cdebconf 0.95, but will degrade to the
    old-style bars if running with earlier versions.
  * Add myself to Uploaders.

  [ Updated translations ]
  * Bulgarian (bg.po) by Ognyan Kulev
  * Catalan (ca.po) by Guillem Jover
  * Greek, Modern (1453-) (el.po) by quad-nrg.net
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Finnish (fi.po) by Tapio Lehtonen
  * Hebrew (he.po) by Lior Kaplan
  * Indonesian (id.po) by Parlin Imanuel Toh
  * Latvian (lv.po) by Aigars Mahinovs
  * Latvian (pa_IN.po) by Amanpreet Singh Alam
  * Polish (pl.po) by Bartosz Fenski
  * Slovenian (sl.po) by Jure Čuhalev
  * Swedish (sv.po) by Daniel Nylander
  * Turkish (tr.po) by Recai Oktaş
  * Vietnamese (vi.po) by Clytie Siddall

 -- Colin Watson <cjwatson@debian.org>  Mon, 16 Jan 2006 16:14:01 +0000

netcfg (1.21) unstable; urgency=low

  * dhcp3 calls the "dhcp-class-identifier" option "vendor-class-identifier"
    instead.

  [ Updated translations ]
  * Galician (gl.po) by Jacobo Tarrio

 -- Colin Watson <cjwatson@debian.org>  Tue, 13 Dec 2005 16:11:09 +0000

netcfg (1.20) unstable; urgency=low

  * Fix segfault because of error in hotplug configuration code.

  [ Updated translations ]
  * Latvian (lv.po) by Aigars Mahinovs

 -- Frans Pop <fjp@debian.org>  Sat,  3 Dec 2005 18:54:41 +0100

netcfg (1.19) unstable; urgency=low

  * Fix error in hotplug configuration for interfaces other than eth0.
