@@ -1,0 +1,6 @@
+#!/bin/sh
+. /usr/share/debconf/confmodule
+db_get netcfg-st/second_time
+if [ ${RET} = 'true' ] ; then
+  exec netcfg
+fi
