@@ -1,8 +1,8 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
+# debian/rules that uses debhelper.
 # GNU copyright 1997 to 1999 by Joey Hess.
 
-PACKAGES	= $(shell dh_listpackages -s)
+PACKAGES	= $(shell dh_listpackages -s | sed -e '/netcfg-st$$/d' )
 DHCP_PACKAGES	= netcfg 
 
 build: build-stamp
@@ -28,9 +28,9 @@ install: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	dh_installdirs -A usr/lib/base-installer.d etc/network bin
-	# Install files that are the same in all packages
+	# Install files and dirs that are the same in all packages
 	$(foreach PACKAGE, $(PACKAGES), \
+	  dh_installdirs -p $(PACKAGE) usr/lib/base-installer.d etc/network bin; \
 	  install -m 755 $(PACKAGE) debian/$(PACKAGE)/bin/netcfg; \
 	  install -m 755 base-installer debian/$(PACKAGE)/usr/lib/base-installer.d/40netcfg ; \
 	  ln -sf netcfg debian/$(PACKAGE)/bin/ptom; )
