@@ -3,7 +3,10 @@ netcfg (1.24) UNRELEASED; urgency=low
   [ Martin Michlmayr ]
   * Add armeb to the Architecture field.
 
- -- Martin Michlmayr <tbm@cyrius.com>  Mon, 30 Jan 2006 01:34:16 +0000
+  [ Geert Stappers ]
+  * Run netcfg a second time for static configuration on netboot
+
+ -- Geert Stappers <stappers@stappers.nl>  Fri,  3 Feb 2006 12:29:21 +0100
 
 netcfg (1.23) unstable; urgency=low
 
